syntax = "proto3";

package logz;

import "logz/logz.proto";
import "proto/address.proto";

option go_package = "github.com/explodes/serving/logz";

message ServiceConfig {
  .serving.Address bind_address = 1;
}

message RecordRequest {
  Frame stack = 1;
  repeated Entry entries = 2;
}

message RecordResponse {
}

service LogzService {
  rpc Record (RecordRequest) returns (RecordResponse) {
  }
}